# solar-mcp-server

./: .gitignore  LICENSE  README.md  fastmcp.json  pyproject.toml  server.py
example/: .gitignore  pyproject.toml  server.py
reference/: deployment.md  fastmcp_patterns.md
skills/solar-system/: SKILL.md
