[project]
name = "solar-system-mcp"
version = "0.1.0"
description = "MCP server for Solar System API - celestial bodies, positions, and astronomical data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0,<3",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
solar-system-mcp = "server:mcp.run"
